--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,16 @@
-*, 
+*,
 *::before,
 *::after {
   box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    background-color: #1A2121;
-    background-image: url('/assets/lightning.png'), url('/assets/crown.png') ,url('/assets/brick-wall.png');
-    background-size: 200px 371px, 255px 229px, 489px 344px;
-    background-repeat: no-repeat, no-repeat, repeat;
-    background-position: bottom 25% right 20%, top 25% left 20%;
+  margin: 0;
+  overflow-x: hidden;
+}
+
+main {
+  overflow-x: hidden;
 }
 
 .visually-hidden {
@@ -20,49 +20,53 @@ body {
   margin: -1px;
   border: 0;
   padding: 0;
-  
+
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
 
-.container {
+.page-container {
   width: 100%;
-  max-width: 770px;
+  max-width: 720px;
   height: 100vh;
   margin: 0 auto;
-  padding: 90px 16px 16px;
   position: relative;
+  display: grid;
 }
 
-.header {
+.page-container > * {
+  grid-area: 1 / -1;
+}
+
+.inner-header {
   position: sticky;
   z-index: 10;
   left: 0;
   right: 0;
   top: 0;
-  
+
   height: 50px;
   display: flex;
   justify-content: space-between;
 }
 
-.header::before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    inset: 0;
-    background: linear-gradient(rgba(29 36 36 / .8), rgba(29 36 36 / .8));
-    background-repeat: no-repeat;
-    background-size: cover;
-    transform: scaleY(0);
-    transition: transform 0.3s ease-in-out;
-    transform-origin: bottom;
+.inner-header::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  inset: 0;
+  background: linear-gradient(rgba(29 36 36 / .8), rgba(29 36 36 / .8));
+  background-repeat: no-repeat;
+  background-size: cover;
+  transform: scaleY(0);
+  transition: transform 0.3s ease-in-out;
+  transform-origin: bottom;
 }
 
-.header.bkg-col::before {
-    transform: scaleY(1);
+.inner-header.bkg-col::before {
+  transform: scaleY(1);
 }
 
 .buttons-wrapper {
@@ -72,8 +76,9 @@ body {
 }
 
 .container-controls {
-  cursor: pointer;  
+  cursor: pointer;
 }
+
 .slider {
   position: absolute;
   inset: 16px;
@@ -100,7 +105,7 @@ body {
   scroll-behavior: auto;
 }
 
-.slider.dragging .section{
+.slider.dragging .section {
   cursor: grab;
   user-select: none;
 }
@@ -110,8 +115,8 @@ body {
   height: 100%;
   max-height: 100%;
   overflow-y: scroll;
-    scroll-behavior: smooth;
-    scrollbar-width: none;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
   flex-shrink: 0;
   scroll-snap-align: start;
 }
@@ -130,19 +135,21 @@ body {
 
 img {
   max-width: 100%;
+  display: block;
 }
 
-.main-page, .burger-menu {
+.main-page,
+.burger-menu {
   position: absolute;
   z-index: 10;
   inset: 16px;
   top: 90px;
   outline: 1px solid gold;
   transform: translateY(-300%);
-  transition: transform .7s ease-in-out;
+  transition: transform .5s ease-in-out;
 }
 
-.main-page.open, 
+.main-page.open,
 .burger-menu.open {
   transform: translateY(0);
 }
@@ -150,14 +157,13 @@ img {
 
 :where(.main-page, .burger-menu) a {
   display: block;
-  color: white;
 
 }
 
 .container:has(section.main-page.open) :where(.header, .slider),
-.container:has(section.burger-menu.open)  :where(.header, .slider, .main-page) {
+.container:has(section.burger-menu.open) :where(.header, .slider, .main-page) {
   opacity: 0;
-  transition: opacity .3s ease-in-out;
+  transition: opacity .5s ease-in-out;
   /* position: absolute;
   width: 1px;
   height: 1px;
